<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">


    <TextView
        android:id="@+id/rec_in_kdvType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kdv_dahil"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rec_in_delete_image"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/rec_in_delete_image" />

    <ImageView
        android:id="@+id/rec_in_delete_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hata"
        android:src="@drawable/delete_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextViewKayitlarim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutar_text"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/rec_in_tutarSonuc"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/rec_in_tutarSonuc"
        style="@style/TextViewKayitlarim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:text="@string/default_tl"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rec_in_kdvTutarSonuc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/rec_in_toplamTutarSonuc"
        app:layout_constraintTop_toBottomOf="@+id/rec_in_delete_image"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/rec_in_kdvTutar"
        style="@style/TextViewKayitlarim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kdv_tutari_text"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/rec_in_kdvTutarSonuc"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/rec_in_kdvTutarSonuc"
        style="@style/TextViewKayitlarim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/default_tl"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rec_in_toplamTutarSonuc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/rec_in_toplamTutarSonuc"
        app:layout_constraintTop_toBottomOf="@+id/rec_in_tutarSonuc" />

    <TextView
        android:id="@+id/rec_in_toplamTutar"
        style="@style/TextViewKayitlarim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/kdv_dahil_text"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/rec_in_toplamTutarSonuc"
        app:layout_constraintEnd_toStartOf="@+id/rec_in_toplamTutarSonuc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline3" />

    <TextView
        android:id="@+id/rec_in_toplamTutarSonuc"
        style="@style/TextViewKayitlarim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/default_tl"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rec_in_eklenmeTarihiSonuc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rec_in_toplamTutar"
        app:layout_constraintTop_toBottomOf="@+id/rec_in_kdvTutarSonuc" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextViewKayitlarim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eklenme_tarihi"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/rec_in_eklenmeTarihiSonuc"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/rec_in_eklenmeTarihiSonuc"
        style="@style/TextViewKayitlarim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/rec_in_toplamTutarSonuc"
        app:layout_constraintTop_toBottomOf="@+id/rec_in_toplamTutarSonuc" />
</androidx.constraintlayout.widget.ConstraintLayout>